Minified all vendor JS, closes #163

--- a/index.html
+++ b/index.html
@@ -190,52 +190,52 @@
         </footer>
     </div>
 
-    <script src="excelsior/js/vendor/jquery.js"></script>
+    <script src="excelsior/js/vendor/jquery.min.js"></script>
     <script src="excelsior/js/core/excelsior.min.js"></script>
     <script src="excelsior/js/core/off-canvas.min.js"></script>
-    <script src="excelsior/js/foundation/foundation.js"></script>
+    <script src="excelsior/js/foundation/foundation.min.js"></script>
 
     <!-- Uncomment items as needed -->
     <!-- Foundation -->
-    <!-- <script src="excelsior/js/foundation/foundation.alerts.js"></script> -->
+    <!-- <script src="excelsior/js/foundation/foundation.alerts.min.js"></script> -->
 
-    <!-- <script src="excelsior/js/foundation/foundation.clearing.js"></script> -->
+    <!-- <script src="excelsior/js/foundation/foundation.clearing.min.js"></script> -->
 
-    <!-- <script src="excelsior/js/foundation/foundation.cookie.js"></script> -->
+    <!-- <script src="excelsior/js/foundation/foundation.cookie.min.js"></script> -->
 
-    <!-- <script src="excelsior/js/foundation/foundation.dropdown.js"></script> -->
+    <!-- <script src="excelsior/js/foundation/foundation.dropdown.min.js"></script> -->
 
-    <!-- <script src="excelsior/js/foundation/foundation.forms.js"></script> -->
+    <!-- <script src="excelsior/js/foundation/foundation.forms.min.js"></script> -->
 
-    <!-- <script src="excelsior/js/foundation/foundation.joyride.js"></script> -->
+    <!-- <script src="excelsior/js/foundation/foundation.joyride.min.js"></script> -->
 
-    <!-- <script src="excelsior/js/foundation/foundation.magellan.js"></script> -->
+    <!-- <script src="excelsior/js/foundation/foundation.magellan.min.js"></script> -->
 
-    <!-- <script src="excelsior/js/foundation/foundation.orbit.js"></script> -->
+    <!-- <script src="excelsior/js/foundation/foundation.orbit.min.js"></script> -->
 
-    <!-- <script src="excelsior/js/foundation/foundation.placeholder.js"></script> -->
+    <!-- <script src="excelsior/js/foundation/foundation.placeholder.min.js"></script> -->
 
-    <!-- <script src="excelsior/js/foundation/foundation.reveal.js"></script> -->
+    <!-- <script src="excelsior/js/foundation/foundation.reveal.min.js"></script> -->
 
-    <!-- <script src="excelsior/js/foundation/foundation.section.js"></script> -->
+    <!-- <script src="excelsior/js/foundation/foundation.section.min.js"></script> -->
 
-    <!-- <script src="excelsior/js/foundation/foundation.tooltips.js"></script> -->
+    <!-- <script src="excelsior/js/foundation/foundation.tooltips.min.js"></script> -->
 
-    <!-- <script src="excelsior/js/foundation/foundation.topbar.js"></script> -->
+    <!-- <script src="excelsior/js/foundation/foundation.topbar.min.js"></script> -->
 
 
     <!-- Excelsior -->
-    <!-- <script src="excelsior/js/core/off-canvas.js"></script> -->
+    <!-- <script src="excelsior/js/core/off-canvas.min.js"></script> -->
 
 
     <!-- Charting -->
     <!-- <script src="excelsior/js/vendor/chart.min.js"></script> -->
-    <!-- <script src="excelsior/js/core/respCharts.js"></script> -->
+    <!-- <script src="excelsior/js/core/respCharts.min.js"></script> -->
 
 
     <!-- Responsive Tables -->
     <!-- <script src="excelsior/js/vendor/jquery-ui.widget.min.js"></script> -->
-    <!-- <script src="excelsior/js/core/responsive-tables.js"></script> -->
+    <!-- <script src="excelsior/js/core/responsive-tables.min.js"></script> -->
 
     <script>$(document).foundation();</script>
 
