Restored site title to a single line.

--- a/index.html
+++ b/index.html
@@ -62,14 +62,13 @@
     <div id="site-bar" class="site-bar">
         <div class="site-wrap">
             <div class="site-title">
-                <a href="index.html" class="site-logo two-line-title">
+                <a href="index.html" class="site-logo">
                 <!--
                 ========================
                 Place Site Title Here
                 ========================
                 -->
-                <span>Excelsior</span>
-                <span>Web Framework</span>
+                Excelsior Web Framework
                 <!--
                 ========================
                 End Site Title Here
