--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <body class="off-canvas">
     <a href="#global-nav" class="skip-to">Skip to Navigation</a>
     <a href="#page" class="skip-to">Skip to Content</a>
-    <div class="gov-pull-down-container show-for-small">
-        <a href="#" id="gov-pull-down" class="gov-pull-down show-for-small" data-active="active-gov-bar">
+    <div class="pull-down-container show-for-small">
+        <a href="#" id="pull-down" class="pull-down show-for-small" data-active="active-gov-bar">
             <span class="accessibility-text">Open New York State Search</span>
             <span class="gripper">
                 <span></span>
