active-gov-bar to active-top-bar

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <a href="#global-nav" class="skip-to">Skip to Navigation</a>
     <a href="#page" class="skip-to">Skip to Content</a>
     <div class="pull-down-container show-for-small">
-        <a href="#" id="pull-down" class="pull-down show-for-small" data-active="active-gov-bar">
+        <a href="#" id="pull-down" class="pull-down show-for-small" data-active="active-top-bar">
             <span class="accessibility-text">Open New York State Search</span>
             <span class="gripper">
                 <span></span>
