abstract gov-links to top-links

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Getting Started</title>
 
     <!-- Excelsior Stylesheets -->
-    <link rel="stylesheet" href="excelsior/css/excelsior.min.css">
-    <link rel="stylesheet" href="excelsior/css/off-canvas.min.css">
+    <link rel="stylesheet" href="excelsior/css/excelsior.css">
+    <link rel="stylesheet" href="excelsior/css/off-canvas.css">
 
     <!-- Optional Project Stylesheet (create in project-assets/css folder) -->
     <!-- <link rel="stylesheet" href="project-assets/css/project.css"> -->
@@ -33,12 +33,12 @@
         </a>
     </div>
     <div id="gov-bar" class="gov-bar">
-        <div class="gov-wrap">
-            <div class="state-links">
-                <a href="http://www.ny.gov/" class="gov-link-1">New York State</a>
-                <a href="#" class="gov-link-2">State Agencies</a>
+        <div class="top-wrap">
+            <div class="group-links">
+                <a href="http://www.ny.gov/" class="top-link-1">New York State</a>
+                <a href="http://www.nysegov.com/citGuide.cfm?superCat=102&amp;cat=449&amp;content=main" class="top-link-2">State Agencies</a>
             </div>
-            <a href="http://www.nysegov.com/citGuide.cfm?superCat=102&amp;cat=449&amp;content=main" id="gov-link-3" class="gov-link-3">Search all of NY.gov</a>
+            <a href="http://www.nysegov.com/citGuide.cfm?superCat=102&amp;cat=449&amp;content=main" id="top-link-3" class="top-link-3">Search all of NY.gov</a>
             <form action="http://www.search.cio.ny.gov/search" method="get" target="_blank">
                 <fieldset>
                     <legend>Legend</legend>
