Alignment issues with the NYS Search box

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Getting Started</title>
 
     <!-- Excelsior Stylesheets -->
-    <link rel="stylesheet" href="excelsior/css/excelsior.min.css">
-    <link rel="stylesheet" href="excelsior/css/off-canvas.min.css">
+    <link rel="stylesheet" href="excelsior/css/excelsior.css">
+    <link rel="stylesheet" href="excelsior/css/off-canvas.css">
 
     <!-- Optional Project Stylesheet (create in project-assets/css folder) -->
     <!-- <link rel="stylesheet" href="project-assets/css/project.css"> -->
