--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </span>
         </a>
     </div>
-    <div id="gov-bar" class="gov-bar">
+    <div id="top-bar" class="gov-bar">
         <div class="top-wrap">
             <div class="group-links">
                 <a href="http://www.ny.gov/" class="top-link-1">New York State</a>
