--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-    <title>Getting Started</title>
+    <title>Getting Started With Excelsior</title>
 
     <!-- Excelsior Stylesheets -->
     <link rel="stylesheet" href="excelsior/css/excelsior.min.css">
@@ -32,7 +32,7 @@
             </span>
         </a>
     </div>
-    <div id="gov-bar" class="gov-bar">
+    <div class="gov-bar">
         <div class="gov-wrap">
             <div class="state-links">
                 <a href="http://www.ny.gov/" class="gov-link-1">New York State</a>
@@ -59,7 +59,7 @@
             </form>
         </div>
     </div>
-    <div id="site-bar" class="site-bar">
+    <div class="site-bar">
         <div class="site-wrap">
             <div class="site-title">
                 <a href="index.html" class="site-logo">
@@ -130,7 +130,7 @@
             -->
         </div>
     </nav>
-    <div id="page" class="page">
+    <div class="page">
         <div class="content-section">
             <noscript>
                 <div class="alert-box">
