Swapped out elements making them us HTML5. Fixes #190

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </form>
         </div>
     </div>
-    <div id="site-bar" class="site-bar">
+    <header id="site-bar" class="site-bar">
         <div class="site-wrap">
             <div class="site-title">
                 <a href="index.html" class="site-logo">
@@ -98,7 +98,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </header>
     <nav id="global-nav" class="global-nav">
         <div class="nav-container">
             <!--
@@ -131,7 +131,7 @@
         </div>
     </nav>
     <div id="page" class="page">
-        <div class="content-section">
+        <section class="content-section">
             <noscript>
                 <div class="alert-box">
                     <p><strong>JavaScript is currently disabled in your web browser. </strong><br /> For full functionality of this site, it is necessary to enable JavaScript. Here are <a href="http://www.enable-javascript.com/" target="_blank"> instructions how to enable JavaScript</a></p>
@@ -165,7 +165,7 @@
             End Page Content
             ========================
             -->
-        </div>
+        </section>
         <footer role="contentinfo" class="footer">
             <div class="footer-contents">
                 <!--
