--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </span>
         </a>
     </div>
-    <div id="gov-bar" class="gov-bar">
+    <div class="gov-bar">
         <div class="gov-wrap">
             <div class="state-links">
                 <a href="http://www.ny.gov/" class="gov-link-1">New York State</a>
@@ -59,7 +59,7 @@
             </form>
         </div>
     </div>
-    <header id="site-bar" class="site-bar">
+    <header class="site-bar">
         <div class="site-wrap">
             <div class="site-title">
                 <a href="index.html" class="site-logo">
@@ -99,7 +99,7 @@
             </div>
         </div>
     </header>
-    <nav id="global-nav" class="global-nav">
+    <nav class="global-nav" id="global-nav">
         <div class="nav-container">
             <!--
             ========================
@@ -130,7 +130,7 @@
             -->
         </div>
     </nav>
-    <div id="page" class="page">
+    <div class="page">
         <section class="content-section">
             <noscript>
                 <div class="alert-box">
