Removed more unneeded ids

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <label for="site-search-box">Search</label>
                     <div class="search-container">
                         <label for="state-search" class="hide-off-screen">Search All of NYS</label>
-                        <input type="search" name="q" id="state-search">
+                        <input type="search" name="q">
                         <input type="submit" value="Search NY">
                     </div>
                     <input type="hidden" name="sort" value="date:D:L:d1">
