using the non-min version for debugging

--- a/test/sink/index.html
+++ b/test/sink/index.html
@@ -6,7 +6,7 @@
     <title>Getting Started With Excelsior</title>
 
     <!-- Excelsior Stylesheets -->
-    <link rel="stylesheet" href="../../excelsior/css/excelsior.min.css">
+    <link rel="stylesheet" href="../../excelsior/css/excelsior.css">
 
     <!-- Optional Project Stylesheet (create in project-assets/css folder) -->
     <!-- <link rel="stylesheet" href="project-assets/css/project.css"> -->
