Uncommented foundation js

--- a/test/sink/index.html
+++ b/test/sink/index.html
@@ -1040,35 +1040,31 @@
 
     <!-- Uncomment items as needed -->
     <!-- Foundation -->
-    <!-- <script src="../../excelsior/js/foundation/foundation.alerts.min.js"></script> -->
+    <script src="../../excelsior/js/foundation/foundation.alerts.min.js"></script>
 
-    <!-- <script src="../../excelsior/js/foundation/foundation.clearing.min.js"></script> -->
+    <script src="../../excelsior/js/foundation/foundation.clearing.min.js"></script>
 
-    <!-- <script src="../../excelsior/js/foundation/foundation.cookie.min.js"></script> -->
+    <script src="../../excelsior/js/foundation/foundation.cookie.min.js"></script>
 
-    <!-- <script src="../../excelsior/js/foundation/foundation.dropdown.min.js"></script> -->
+    <script src="../../excelsior/js/foundation/foundation.dropdown.min.js"></script>
 
-    <!-- <script src="../../excelsior/js/foundation/foundation.forms.min.js"></script> -->
+    <script src="../../excelsior/js/foundation/foundation.forms.min.js"></script>
 
-    <!-- <script src="../../excelsior/js/foundation/foundation.joyride.min.js"></script> -->
+    <script src="../../excelsior/js/foundation/foundation.joyride.min.js"></script>
 
-    <!-- <script src="../../excelsior/js/foundation/foundation.magellan.min.js"></script> -->
+    <script src="../../excelsior/js/foundation/foundation.magellan.min.js"></script>
 
-    <!-- <script src="../../excelsior/js/foundation/foundation.orbit.min.js"></script> -->
+    <script src="../../excelsior/js/foundation/foundation.orbit.min.js"></script>
 
-    <!-- <script src="../../excelsior/js/foundation/foundation.placeholder.min.js"></script> -->
+    <script src="../../excelsior/js/foundation/foundation.placeholder.min.js"></script>
 
-    <!-- <script src="../../excelsior/js/foundation/foundation.reveal.min.js"></script> -->
+    <script src="../../excelsior/js/foundation/foundation.reveal.min.js"></script>
 
-    <!-- <script src="../../excelsior/js/foundation/foundation.section.min.js"></script> -->
+    <script src="../../excelsior/js/foundation/foundation.section.min.js"></script>
 
-    <!-- <script src="../../excelsior/js/foundation/foundation.tooltips.min.js"></script> -->
+    <script src="../../excelsior/js/foundation/foundation.tooltips.min.js"></script>
 
-    <!-- <script src="../../excelsior/js/foundation/foundation.topbar.min.js"></script> -->
-
-
-    <!-- Excelsior -->
-    <!-- <script src="../../excelsior/js/core/off-canvas.min.js"></script> -->
+    <script src="../../excelsior/js/foundation/foundation.topbar.min.js"></script>
 
 
     <!-- Charting -->
