--- a/test/sink/index.html
+++ b/test/sink/index.html
@@ -982,29 +982,7 @@
     <p>It works as a modal too!</p>
   </li>
 </ol>
-
-<!-- Reveal Modals -->
-<div id="firstModal" class="reveal-modal">
-  <h2>This is a modal.</h2>
-  <p>Reveal makes these very easy to summon and dismiss. The close button is simply an anchor with a unicode character icon and a class of <code>close-reveal-modal</code>. Clicking anywhere outside the modal will also dismiss it.</p>
-  <p>Finally, if your modal summons another Reveal modal, the plugin will handle that for you gracefully.</p>
-  <p><a href="#" data-reveal-id="secondModal" class="secondary button">Second Modal…</a></p>
-  <a class="close-reveal-modal">&#215;</a>
-</div>
-<div id="secondModal" class="reveal-modal">
-  <h2>This is a second modal.</h2>
-  <p>Reveal makes these very easy to summon and dismiss. The close button is simply an anchor with a unicode character icon and a class of <code>close-reveal-modal</code>. Clicking anywhere outside the modal will also dismiss it.</p>
-  <p>Finally, if your modal summons another Reveal modal, the plugin will handle that for you gracefully.</p>
-  <a class="close-reveal-modal">&#215;</a>
-</div>
-<div id="videoModal" class="reveal-modal large">
-  <h2>This modal has video</h2>
-  <div class="flex-video">
-    <iframe width="800" height="315" src="http://www.youtube.com/embed/IkOQw96cfyE" frameborder="0" allowfullscreen></iframe>
-  </div>
-
-  <a class="close-reveal-modal">&#215;</a>
-</div>            <!--
+          <!--
             ========================
             End Page Content
             ========================
@@ -1032,6 +1010,41 @@
             </div>
         </footer>
     </div>
+
+    <!--
+    ========================
+    Place Modal(s) and Content Here
+    ========================
+    -->
+
+<!-- Reveal Modals -->
+<div id="firstModal" class="reveal-modal">
+  <h2>This is a modal.</h2>
+  <p>Reveal makes these very easy to summon and dismiss. The close button is simply an anchor with a unicode character icon and a class of <code>close-reveal-modal</code>. Clicking anywhere outside the modal will also dismiss it.</p>
+  <p>Finally, if your modal summons another Reveal modal, the plugin will handle that for you gracefully.</p>
+  <p><a href="#" data-reveal-id="secondModal" class="secondary button">Second Modal…</a></p>
+  <a class="close-reveal-modal">&#215;</a>
+</div>
+<div id="secondModal" class="reveal-modal">
+  <h2>This is a second modal.</h2>
+  <p>Reveal makes these very easy to summon and dismiss. The close button is simply an anchor with a unicode character icon and a class of <code>close-reveal-modal</code>. Clicking anywhere outside the modal will also dismiss it.</p>
+  <p>Finally, if your modal summons another Reveal modal, the plugin will handle that for you gracefully.</p>
+  <a class="close-reveal-modal">&#215;</a>
+</div>
+<div id="videoModal" class="reveal-modal large">
+  <h2>This modal has video</h2>
+  <div class="flex-video">
+    <iframe width="800" height="315" src="http://www.youtube.com/embed/IkOQw96cfyE" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+  <a class="close-reveal-modal">&#215;</a>
+</div>
+
+    <!--
+    ========================
+    End Modal(s) and Content Here
+    ========================
+    -->
 
     <script src="../../excelsior/js/vendor/jquery.min.js"></script>
     <script src="../../excelsior/js/core/excelsior.min.js"></script>
