Added zeptos and it fixed the sections component

--- a/test/sink/index.html
+++ b/test/sink/index.html
@@ -558,8 +558,8 @@
             </div>
           </div>
           <div class="large-9 columns">
-            <div class="section-container horizontal-nav" data-section="horizontal-nav">
-              <section class="section">
+            <div class="section-container horizontal-nav" data-section="horizontal-nav" data-options="one_up: false;">
+              <section>
                 <p class="title"><a href="#">Section 1</a></p>
                 <div class="content">
                   <ul class="side-nav">
@@ -571,7 +571,7 @@
                   </ul>
                 </div>
               </section>
-              <section class="section">
+              <section>
                 <p class="title"><a href="#">Section 2</a></p>
                 <div class="content">
                   <ul class="side-nav">
@@ -584,6 +584,7 @@
                 </div>
               </section>
             </div>
+
             <div class="section-container auto" data-section data-options="deep_linking: true;">
               <section class="section">
                 <p class="title"><a href="#panel1">Section 1</a></p>
@@ -624,46 +625,7 @@
                 </div>
               </div>
             </div>
-            <div class="section-container accordion" data-section="accordion">
-              <section class="section">
-                <p class="title"><a href="#panel1">Section 1</a></p>
-                <div class="content" data-slug="panel1">
-                  <p>Section 1. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                </div>
-              </section>
-              <section class="section">
-                <p class="title"><a href="#panel2">Section 2</a></p>
-                <div class="content" data-slug="panel2">
-                  <p>Section 2. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                </div>
-              </section>
-              <section class="section">
-                <p class="title"><a href="#panel3">Section 3</a></p>
-                <div class="content" data-slug="panel3">
-                  <p>Section 2. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                </div>
-              </section>
-            </div>
-            <div class="section-container tabs" data-section="tabs">
-              <section class="section">
-                <p class="title"><a href="#panel1">Section 1</a></p>
-                <div class="content" data-slug="panel1">
-                  <p>Section 1. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                </div>
-              </section>
-              <section class="section">
-                <p class="title"><a href="#panel2">Section 2</a></p>
-                <div class="content" data-slug="panel2">
-                  <p>Section 2. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                </div>
-              </section>
-              <section class="section">
-                <p class="title"><a href="#panel3">Section 3</a></p>
-                <div class="content" data-slug="panel3">
-                  <p>Section 2. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                </div>
-              </section>
-            </div>
+
           </div>
         </div>
 
@@ -1043,6 +1005,7 @@
     ========================
     -->
 
+    <script src="../../excelsior/js/vendor/zepto.min.js"></script>
     <script src="../../excelsior/js/vendor/jquery.min.js"></script>
     <script src="../../excelsior/js/core/excelsior.min.js"></script>
     <script src="../../excelsior/js/core/off-canvas.min.js"></script>
